Доделал регистрацию, создал сервисы для ролей, авторизации и вынес логику их работы из контроллера. Добавил Jwt-фильтры